--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ display-social-icons: true
 footer-text: This is the footer.<br><a href="http://steinvc.github.io/holo-alfa/">Holo Alfa</a> Jekyll theme crafted by <a href="http://steinvc.github.io/holo-alfa/">Stijn</a>.
 
 # Preferably 64px in height. Leave empty = disable.
-logo-image:  /img/logo1.png
+logo-image:  /img/logo2.png
 
 # Toolbar color for Chrome on Android.
 theme-color-attr: "#00f0ff"
@@ -97,7 +97,7 @@ reddit:
 soundcloud:
 medium:
 linkedin:
-github: slow295185031@gmail.com
+    github: https://github.com/foocoder
 behance:
 codepen:
 dribbble:
