--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,8 @@ trello:
 stack-overflow:
 bitcoin:
 paypal:
+weibo: http://weibo.com/yeomanslow/
+zhihu: http://zhihu.com/people/yeomanslow/
 
 
 #####################
