add share icon flickr

--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,7 @@ instagram:
 tumblr:
 facebook: https://www.facebook.com/yeoman.slow/
 google-plus: https://plus.google.com/u/0/101257011987309990194/posts/p/pub/
+flickr: https://www.flickr.com/photos/yeomanslow
 reddit:
 soundcloud:
 medium:
