change markdown to redcarpet

--- a/_config.yml
+++ b/_config.yml
@@ -88,6 +88,8 @@ googleAnaly:
 baiduAnaly:
     config: true
 
+#Markdown 
+markdown: redcarpet
 ################
 # SOCIAL ICONS #
 ################
