--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ baiduAnaly:
     config: true
 
 #Markdown
-markdown: kramdown
+markdown: rdiscount
 ################
 # SOCIAL ICONS #
 ################
