--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ baiduAnaly:
     config: true
 
 #Markdown
-markdown: redcarpet
+markdown: rdiscount
 ################
 # SOCIAL ICONS #
 ################
