--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
   # want it.
   info: who is just a Coder Monkey!
 
-url: http://127.0.0.1:4000
+url: http://foocoder.github.io
 baseurl: ""
 
 # language attribute in <html> element.
