--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
   # want it.
   info: who is just a Coder Monkey!
 
-url: http://foocoder.github.io
+url: http://127.0.0.1:4000
 baseurl: ""
 
 # language attribute in <html> element.
@@ -92,7 +92,7 @@ baiduAnaly:
     config: true
 
 #Markdown
-markdown: radcarpet
+markdown: rdiscount
 ################
 # SOCIAL ICONS #
 ################
