correct _config.yml err

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # The name of your website.
 name: Meta Coder
 
-description: Meta Coder's Blog
+description:
 
   # Description of your site. This will show up in google.
   meta: Reading, Thinking, Coding
